# nc-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
.sqlx/: query-03630bdda3b486ddd0e9bd5d3eafbd304773a0fedd9c23d80a349752f3d4d9e6.json  query-0817251bd2d321dec60531ff582963b0ee7689b847158252b8ac49a5d28a118f.json  query-20a2e34c6452420df84e33beba914fc9e331c0097e749076ece4baeaeab41337.json  query-46110c242cb37fba36a577efa32cca2f5be3631a43428fd12d583ba782286468.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-8381585539edc1867575d4aceb9202b8fe7445af52848fb34da66bad98a8d286.json  query-abc2bbf8087c9a2b3af2b8a1ec3221b41f02a4651b59732f2d9e8febceabc871.json  query-c00f0ec7d39444d73e871609d8955c64809e69f0eb4eee5515e81400310844a9.json  query-e9f93db7078a60f67f98f9307ab45b79b9144261bdad3f3d515613b0eb32ae10.json  query-fff13625d7144c5f80a383213c652e14793db67e538664a45162e909b61f1e0c.json
docs/: auth.md  readme.md
docs/socket/: message-forwarding.md  readme.md
examples/: message_forwarding.html
migrations/: 20250112202301_init.down.sql  20250112202301_init.up.sql
src/: auth.rs  error.rs  lib.rs  main.rs  models.rs
src/controllers/: auth.rs  badges.rs  bans.rs  mod.rs
src/socket/: auth.rs  mod.rs
src/socket/namespaces/: message_forwarding.rs  mod.rs
